--- a/PersonalInventoryManagement.PL/PersonalInventoryManagement.PL.csproj
+++ b/PersonalInventoryManagement.PL/PersonalInventoryManagement.PL.csproj
@@ -52,6 +52,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="EditProfileFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
